# rd_event_python

./: .gitignore  README.md  dockerfile  pyproject.toml  run_env.sh
resources/: helper.py  main.py
src/: helper.py  main.py
