[project]
name = "rd-event-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.1",
    "loguru>=0.7.2",
    "mypy>=1.11.2",
    "pydantic>=2.9.1",
    "ruff>=0.6.4",
    "uvicorn>=0.30.6",
]

[tool.ruff.lint]
select = ["C", "E", "F", "W"]
unfixable = ["F401"]
