[project]
name = "rd-event-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.1",
    "ipython>=8.27.0",
    "loguru>=0.7.2",
    "mypy>=1.11.2",
    "pip>=24.2",
    "pydantic>=2.9.1",
    "requests>=2.32.3",
    "ruff>=0.6.4",
    "uvicorn>=0.30.6",
]

[tool.ruff.lint]
select = ["C", "E", "F", "W"]
unfixable = ["F401"]
